WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84332
[Qt][WK2] Zoom out on the second double click does not always scale right.
https://bugs.webkit.org/show_bug.cgi?id=84332
Summary
[Qt][WK2] Zoom out on the second double click does not always scale right.
alan
Reported
2012-04-19 06:26:29 PDT
SSIA.
Attachments
Patch
(1.37 KB, patch)
2012-04-19 06:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2012-04-19 06:29:45 PDT
Created
attachment 137891
[details]
Patch
WebKit Review Bot
Comment 2
2012-04-19 08:26:47 PDT
Comment on
attachment 137891
[details]
Patch Clearing flags on attachment: 137891 Committed
r114631
: <
http://trac.webkit.org/changeset/114631
>
WebKit Review Bot
Comment 3
2012-04-19 08:26:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug