[Qt][WK2] Zoom out on the second double click does not always scale right. https://bugs.webkit.org/show_bug.cgi?id=84332

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2012-04-19
Reviewed by Simon Hausmann.

Zoom out to the minimum scale value instead of the fixed 1.

* UIProcess/qt/QtViewportInteractionEngine.cpp:
(WebKit::QtViewportInteractionEngine::zoomToAreaGestureEnded):

Canonical link: https://commits.webkit.org/101833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114631 268f45cc-cd09-0410-ab3c-d52691b4dbfc